Fix photo index off center

--- a/client/src/components/art/art_index.css
+++ b/client/src/components/art/art_index.css
@@ -70,7 +70,6 @@
 				display: flex;
 				flex-wrap: wrap;
 				min-width: 1000px;
-				width: 90%;
 				max-width: 1200px;
 				padding-bottom: 20px;
 		}
